--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "less-compile": "./node_modules/.bin/lessc --js ./styles/style.less ./styles/style.css",
+    "dev": "next dev -p 3212",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@types/node": "^17.0.2",
+    "@types/react": "^17.0.37",
+    "antd": "^4.17.4",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.5.0",
+    "eslint-config-next": "^12.0.7",
+    "less": "^4.1.2",
     "next": "12.0.7",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.7",
+    "typescript": "^4.5.4"
   }
 }
