--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@types/react": "^17.0.37",
     "antd": "^4.17.4",
     "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
     "eslint": "^8.5.0",
     "eslint-config-next": "^12.0.7",
     "less": "^4.1.2",
     "next": "12.0.7",
+    "nextjs-progressbar": "^0.0.13",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.45.1",
     "tailwindcss": "^3.0.7",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "zustand": "^3.6.8"
   }
 }
