--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.17.4",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
+    "crypto-js": "^4.1.1",
     "eslint": "^8.5.0",
     "eslint-config-next": "^12.0.7",
     "less": "^4.1.2",
@@ -24,9 +25,11 @@
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.1.0",
     "sass": "^1.45.1",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.5.4",
+    "universal-cookie": "^4.0.4",
     "zustand": "^3.6.8"
   }
 }
