--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "^12.0.7",
     "less": "^4.1.2",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "nextjs-progressbar": "^0.0.13",
     "postcss": "^8.4.5",
     "react": "17.0.2",
